# FletRt

./: README.md  pyproject.toml
demo/: main.py  page_a.py  page_b.py  page_c.py  page_content.py  page_home.py  page_index.py  page_settings.py
fletrt/: __init__.py  navigation_route.py  route.py  route_view.py  router.py  routing_middleware.py
fletrt/templates/: __init__.py  not_found.py
fletrt/utils/: __init__.py  navigation_bar_utils.py
