[tool.poetry]
name = "fletrt"
version = "0.0.3.post1"
description = "Simple routing for the Flet framework."
authors = ["PedroG022"]
readme = "README.md"
homepage = "https://github.com/pedrog022/fletrt"
repository = "https://github.com/pedrog022/fletrt"
keywords = ["flet", "routing"]

[tool.poetry.dependencies]
python = "^3.7"
flet = "^0.18.0"


[tool.poetry.group.dev.dependencies]
twine = "^4.0.2"
build = "^1.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"